--- a/KGERP/Views/BulkUpload/MaterialBulkUpload.cshtml
+++ b/KGERP/Views/BulkUpload/MaterialBulkUpload.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KGERP.Service.ServiceModel.BulkUpload
 
 @{
-    ViewData["Title"] = "Material Category Upload";
+    ViewData["Title"] = "Material Bulk Upload";
     Layout = "~/Views/Shared/_Layout.cshtml";
     bool? result = ViewBag.Result as bool?;
 }
@@ -13,14 +13,14 @@
 </style>
 
 <section class="content-header">
-    <h1>Material Category Upload</h1>
+    <h1>Material Bulk Upload</h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Material Category Upload</li>
+        <li class="active">Material Bulk Upload</li>
     </ol>
 </section>
 
-@using (Html.BeginForm("MaterialCategoryUpload", "BulkUpload", FormMethod.Post, new { id = "uploadCSVFormId", @class = "formValidator", enctype = "multipart/form-data" }))
+@using (Html.BeginForm("MaterialBulkUpload", "BulkUpload", FormMethod.Post, new { id = "uploadCSVFormId", @class = "formValidator", enctype = "multipart/form-data" }))
 {
     <section class="content">
         <div class="row">
@@ -49,7 +49,12 @@
                                 </div>
                                 <div class="d-block" id="uploadForm">
                                     <div class="form-group">
-                                        <label>CSV File<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        <label>Upload Type<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                        @Html.DropDownListFor(model => model.UploadType, Model.UploadTypeList, "==Select Type==", new { id = "ddStatusId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                        @Html.ValidationMessageFor(model => model.UploadType, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Upload CSV File<sup class="text-danger" title="Required"><b>*</b></sup></label>
                                         <input style="margin: 10px 0;" name="FormFile" type="file" id="fileUpload" accept=".csv" required />
                                         <span class="text-danger"></span>
                                     </div>
