--- a/KGERP/Views/Configuration/CommonRawProductCategory.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProductCategory.cshtml
@@ -105,10 +105,41 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
+                                                <div class="row" style="margin: 15px 0;">
+                                                    <div class="col-md-3 hidden" id="accAsset">
+                                                        <div class="form-group">
+                                                            <label>Asset 2nd Layer<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                            @Html.DropDownListFor(model => model.Head2AssetId, Model.Head2AssetList, "==Select Head==", new { id = "ddlHead2AssetId", @class = "form-control searchingDropdown", required = "true", @style = "width: 100%" })
+                                                            @Html.ValidationMessageFor(model => model.Head2AssetId, "", new { @class = "text-danger" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-3 hidden" id="accEquity">
+                                                        <div class="form-group">
+                                                            <label>Equity 2nd Layer<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                            @Html.DropDownListFor(model => model.Head2EquityId, Model.Head2EquityList, "==Select Head==", new { id = "ddlHead2EquityId", @class = "form-control searchingDropdown", required = "true", @style = "width: 100%" })
+                                                            @Html.ValidationMessageFor(model => model.Head2EquityId, "", new { @class = "text-danger" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-3 hidden" id="accIncome">
+                                                        <div class="form-group">
+                                                            <label>Income 2nd Layer<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                            @Html.DropDownListFor(model => model.Head2IncomeId, Model.Head2IncomeList, "==Select Head==", new { id = "ddlHead2IncomeId", @class = "form-control searchingDropdown", required = "true", @style = "width: 100%" })
+                                                            @Html.ValidationMessageFor(model => model.Head2IncomeId, "", new { @class = "text-danger" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-md-3 hidden" id="accExpense">
+                                                        <div class="form-group">
+                                                            <label>Expense 2nd Layer<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                                            @Html.DropDownListFor(model => model.Head2ExpenseId, Model.Head2ExpenseList, "==Select Head==", new { id = "ddlHead2ExpenseId", @class = "form-control searchingDropdown", required = "true", @style = "width: 100%" })
+                                                            @Html.ValidationMessageFor(model => model.Head2ExpenseId, "", new { @class = "text-danger" })
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-12" style="margin: 10px 0;">
+                                    <div class="col-md-12">
                                         <div class="form-group">
                                             <div class="col-md-6">
                                                 <button type="button" onclick="resetForm()" class="btn btn-secondary btn-block w-100" data-dismiss="modal">Reset</button>
@@ -135,6 +166,7 @@
                                             <tr>
                                                 <th>SL</th>
                                                 <th>Material Category</th>
+                                                <th>Budget</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
@@ -146,6 +178,7 @@
                                                 <tr>
                                                     <td>@(++sl)</td>
                                                     <td id="tdProductCategoryName_@item.ID">@item.Name</td>
+                                                    <td>Yes</td>
                                                     <td>
                                                         <a id="@item.ID" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
@@ -153,8 +186,6 @@
                                                            data-placement="top">
                                                             <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
                                                         </a>
-                                                        @*<a href="~/Configuration/CommonRawProductSubCategory?companyId=@item.CompanyFK&categoryId=@item.ID" class="btn btn-success btn-sm">Raw Subcategory</a>*@
-                                                        @*<a href="~/Configuration/CommonRawProduct?companyId=@item.CompanyFK&categoryId=@item.ID" class="btn btn-warning btn-sm">Raw Materials</a>*@
                                                     </td>
                                                 </tr>
                                             }
@@ -162,16 +193,12 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="box-footer"></div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
-
-
 }
 
 
@@ -189,12 +216,12 @@
                     <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
                         &times;
                     </button>
-                    <h5 class="modal-title"><b>Raw Category Delete</b></h5>
+                    <h5 class="modal-title"><b>material Category Delete</b></h5>
 
                 </div>
                 <div class="modal-body">
                     <div style="text-align:center">
-                        <h3>Are you sure to delete this raw category?</h3>
+                        <h3>Are you sure to delete this material category?</h3>
                     </div>
 
                 </div>
@@ -209,12 +236,40 @@
 }
 
 
-
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
+            $('#asset').on('change', function () {
+                if ($(this).is(':checked')) {
+                    $('#accAsset').removeClass('hidden').addClass('d-block');
+                } else {
+                    $('#accAsset').removeClass('d-block').addClass('hidden');
+                }
+            });
 
+            $('#equity').on('change', function () {
+                if ($(this).is(':checked')) {
+                    $('#accEquity').removeClass('hidden').addClass('d-block');
+                } else {
+                    $('#accEquity').removeClass('d-block').addClass('hidden');
+                }
+            });
 
+            $('#income').on('change', function () {
+                if ($(this).is(':checked')) {
+                    $('#accIncome').removeClass('hidden').addClass('d-block');
+                } else {
+                    $('#accIncome').removeClass('d-block').addClass('hidden');
+                }
+            });
+
+            $('#expense').on('change', function () {
+                if ($(this).is(':checked')) {
+                    $('#accExpense').removeClass('hidden').addClass('d-block');
+                } else {
+                    $('#accExpense').removeClass('d-block').addClass('hidden');
+                }
+            });
         });
 
         function makeEditble(elem) {
